# sfmlrpg

SFMLrpg/: SFMLrpg-Info.plist  main.cpp  sfmlrenderer.cpp  sfmlrenderer.h  sfmlrunner.cpp  sfmlrunner.h  sfmlrunner.mm
SFMLrpg.xcodeproj/: project.pbxproj
SFMLrpg.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SFMLrpg.xcodeproj/project.xcworkspace/xcuserdata/adodman.xcuserdatad/: UserInterfaceState.xcuserstate
SFMLrpg.xcodeproj/xcuserdata/adodman.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SFMLrpg.xcodeproj/xcuserdata/adodman.xcuserdatad/xcschemes/: xcschememanagement.plist
SFMLrpg.xcworkspace/: contents.xcworkspacedata
SFMLrpg.xcworkspace/xcuserdata/adodman.xcuserdatad/: UserInterfaceState.xcuserstate
SKrpg/: AppDelegate.h  AppDelegate.m  GameScene.h  GameScene.m  Info.plist  ViewController.h  ViewController.m  main.m
SKrpg.xcodeproj/: project.pbxproj
SKrpg.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SKrpg.xcodeproj/project.xcworkspace/xcuserdata/adodman.xcuserdatad/: UserInterfaceState.xcuserstate
SKrpg.xcodeproj/xcuserdata/adodman.xcuserdatad/xcschemes/: xcschememanagement.plist
SKrpg/Base.lproj/: Main.storyboard
lib/: CMakeLists.txt
lib/game/: game.cpp
lib/include/: colour.h  game.h  gameinfo.h  gamestate.h  igamerenderer.h  key.h  point.h  rect.h  size.h
